
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_7__ TYPE_3__ ;
typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_5__ {int BaseHi; int BaseMid; int LimitHi; int Type; int Dpl; scalar_t__ Granularity; scalar_t__ Default_Big; int Pres; } ;
struct TYPE_6__ {TYPE_1__ Bits; } ;
struct TYPE_7__ {int BaseLow; int LimitLow; TYPE_2__ HighWord; } ;
typedef TYPE_3__ LDT_ENTRY ;
typedef int HANDLE ;
typedef int DWORD ;


 scalar_t__ GetThreadSelectorEntry (int ,int,TYPE_3__*) ;
 int printf_filtered (char*,int,...) ;
 int puts_filtered (char*) ;

__attribute__((used)) static int
display_selector (HANDLE thread, DWORD sel)
{
  LDT_ENTRY info;
  if (GetThreadSelectorEntry (thread, sel, &info))
    {
      int base, limit;
      printf_filtered ("0x%03lx: ", sel);
      if (!info.HighWord.Bits.Pres)
 {
   puts_filtered ("Segment not present\n");
   return 0;
 }
      base = (info.HighWord.Bits.BaseHi << 24) +
      (info.HighWord.Bits.BaseMid << 16)
      + info.BaseLow;
      limit = (info.HighWord.Bits.LimitHi << 16) + info.LimitLow;
      if (info.HighWord.Bits.Granularity)
 limit = (limit << 12) | 0xfff;
      printf_filtered ("base=0x%08x limit=0x%08x", base, limit);
      if (info.HighWord.Bits.Default_Big)
 puts_filtered(" 32-bit ");
      else
 puts_filtered(" 16-bit ");
      switch ((info.HighWord.Bits.Type & 0xf) >> 1)
 {
 case 0:
   puts_filtered ("Data (Read-Only, Exp-up");
   break;
 case 1:
   puts_filtered ("Data (Read/Write, Exp-up");
   break;
 case 2:
   puts_filtered ("Unused segment (");
   break;
 case 3:
   puts_filtered ("Data (Read/Write, Exp-down");
   break;
 case 4:
   puts_filtered ("Code (Exec-Only, N.Conf");
   break;
 case 5:
   puts_filtered ("Code (Exec/Read, N.Conf");
   break;
 case 6:
   puts_filtered ("Code (Exec-Only, Conf");
   break;
 case 7:
   puts_filtered ("Code (Exec/Read, Conf");
   break;
 default:
   printf_filtered ("Unknown type 0x%x",info.HighWord.Bits.Type);
 }
      if ((info.HighWord.Bits.Type & 0x1) == 0)
 puts_filtered(", N.Acc");
      puts_filtered (")\n");
      if ((info.HighWord.Bits.Type & 0x10) == 0)
 puts_filtered("System selector ");
      printf_filtered ("Priviledge level = %d. ", info.HighWord.Bits.Dpl);
      if (info.HighWord.Bits.Granularity)
 puts_filtered ("Page granular.\n");
      else
 puts_filtered ("Byte granular.\n");
      return 1;
    }
  else
    {
      printf_filtered ("Invalid selector 0x%lx.\n",sel);
      return 0;
    }
}
